--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
@@ -125,28 +125,31 @@
                             <Button DockPanel.Dock="Right" Margin="2,0" Content="设置" Click="PoiFix_Create_Click"/>
                         </StackPanel>
 
-
                         <DockPanel  Margin="2">
-                            <TextBlock  Text="LeftTop"  MinWidth="70" />
+                            <TextBlock  Text="左上"  MinWidth="70" />
                             <TextBox  Text="{Binding  LeftTopX}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                             <TextBox   Text="{Binding LeftTopY}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                         </DockPanel>
 
                         <DockPanel  Margin="2">
-                            <TextBlock Text="RightTop"   MinWidth="70"/>
+                            <TextBlock Text="右上"   MinWidth="70"/>
                             <TextBox  Text="{Binding RightTopX}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                             <TextBox   Text="{Binding RightTopY}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                         </DockPanel>
                         <DockPanel  Margin="2">
-                            <TextBlock Text="LeftBottom"   MinWidth="70"/>
-                            <TextBox Text="{Binding LeftBottomX}" Width="80" Margin="5,0" BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
-                            <TextBox   Text="{Binding LeftBottomY}" Width="80" Margin="5,0"   BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
-                        </DockPanel>
-                        <DockPanel  Margin="2">
-                            <TextBlock Text="RightBottom"  MinWidth="70"/>
+                            <TextBlock Text="右下"  MinWidth="70"/>
                             <TextBox  Text="{Binding RightBottomX}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                             <TextBox   Text="{Binding RightBottomY}" Width="80" Margin="5,0"  BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
                         </DockPanel>
+                        <DockPanel  Margin="2">
+                            <TextBlock Text="左下"   MinWidth="70"/>
+                            <TextBox Text="{Binding LeftBottomX}" Width="80" Margin="5,0" BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
+                            <TextBox   Text="{Binding LeftBottomY}" Width="80" Margin="5,0"   BorderThickness="0,0,0,1" PreviewTextInput="TextBox_PreviewTextInput"/>
+                        </DockPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="设置到全局缓存" Click="Button_Click_4"/>
+                            <Button Content="应用缓存" Click="Button_Click_3"/>
+                        </StackPanel>
                     </StackPanel>
                     <CheckBox Content="启用发光区4个角点" IsChecked="{Binding PoiConfig.IsPointInt}" Margin="2"/>
                     <StackPanel Visibility="{Binding PoiConfig.IsPointInt,Converter={StaticResource bool2VisibilityConverter}}">
@@ -170,6 +173,9 @@
                             <TextBox  Text="{Binding PoiConfig.PointInt4.X}" Width="55" Margin="5,0"  />
                             <TextBox  Text="{Binding PoiConfig.PointInt4.Y}" Width="55" Margin="5,0"  />
                         </DockPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="设置到全局缓存" Click="Button_Click_5"/>
+                        </StackPanel>
                     </StackPanel>
                 </StackPanel>
             </Border>
