--- a/Projects/ProjectARVRLite/Config/EditARVRConfig.xaml
+++ b/Projects/ProjectARVRLite/Config/EditARVRConfig.xaml
@@ -21,7 +21,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Background="{DynamicResource  SecondaryRegionBrush}" Grid.RowSpan="2" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
+        <Border Background="{DynamicResource  SecondaryRegionBrush}" Grid.RowSpan="2" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" />
         <ScrollViewer>
             <StackPanel x:Name="StackPanelContent" Margin="5">
 
@@ -55,8 +55,6 @@
                             <TextBlock Text="允许测试失败 " Width="120"/>
                             <ui:ToggleSwitch IsChecked="{Binding AllowTestFailures}" Margin="0,0,5,0"/>
                         </StackPanel>
-
-
                         <StackPanel  Margin="0,0,0,5" Orientation="Horizontal">
                             <TextBlock Text="打开图像延迟 " Width="120"/>
                             <TextBox Width="140"  Text="{Binding ViewImageReadDelay}"/>
