--- a/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/Views/ViewCamera.xaml
@@ -34,14 +34,14 @@
             <ToolBarTray  Grid.Row="0" IsLocked="True"  Background="Transparent">
                 <ToolBar Band="0" BandIndex="0" Padding="3,2" >
                     <ToggleButton  Style="{StaticResource ToggleButtonSwitch}" Margin="0,0,2,0" IsChecked="{Binding Config.IsShowListView, Converter={StaticResource Boolean2BooleanReConverter}}"/>
-                    <Button Click="Button_Click_Export" Margin="0,0,2,0" >
-                        <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageSave}" />
-                    </Button>
                     <Button Content="{x:Static properties:Resources.Inquire}" Click="Search_Click" Margin="0,0,2,0"/>
                     <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="Search1_Click" Margin="0,0,2,0"/>
                 </ToolBar>
             </ToolBarTray>
             <StackPanel HorizontalAlignment="Right"  Orientation="Horizontal">
+                <Button Click="Button_Click_Export" Padding="2" Height="25" Width="25" Margin="0,1,5,0">
+                    <Rectangle Width="16" Height="16" Fill="{StaticResource DISave}" />
+                </Button>
                 <Button  Command="{Binding Config.ClearListCommand}" Padding="2" Height="25" Width="25">
                     <Button.Triggers>
                         <EventTrigger RoutedEvent="Button.Click">
